--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script type="module" src="/scripts/index.js"></script>
+  <script src="/scripts/index.js" type="text/javascript"></script>
 </html>
