--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Line memorization tool</title>
-    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="style/index.css" />
   </head>
   <body>
     <div id="app"></div>
   </body>
-  <script src="/scripts/index.js" type="text/javascript"></script>
+  <script src="scripts/index.js" type="text/javascript"></script>
 </html>
